# QuEST

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  input.cfg  mp.txt  multiple_sources.cpp
cmake/: flag_check.cmake  set_git_hash.cmake
cmake/modules/: FindSILO.cmake
doc/: Doxyfile
examples/: CMakeLists.txt  dots.cfg  input.cfg  pulse.cfg
examples/experiments/: .hotfix.cpp.swo  CMakeLists.txt  aim_check.cpp  convergence.cpp  crossover.cpp  direct_aim_comparison.cpp  full_aim_calculation.cpp  hotfix.cpp  hotfix_SI.cpp  multiphysics.cpp  potential_and_field_error.cpp  propagation_error.cpp  timestepping.cpp
install/: get_boost.sh  get_eigen.sh
notes/: AIM matrix elements.ipynb  Toeplitz+matrix+product.ipynb
src/: CMakeLists.txt  EMRG_exceptions.h  bloch.cpp  bloch.h  bloch_system.cpp  bloch_system.h  common.h  configuration.cpp  configuration.h  convolution.cpp  convolution.h  fourier.h  history.cpp  history.h  input.cpp  input.h  integrator.cpp  integrator.h  interaction.cpp  interaction.h  interaction_table.cpp  interaction_table.h  interpolation_table.cpp  interpolation_table.h  lagrange_set.cpp  lagrange_set.h  logging.h  magnetic_particle.cpp  magnetic_particle.h  main.cpp  math_utils.cpp  math_utils.h  prolates.cpp  prolates.h  pulse.cpp  pulse.h  quantum_dot.cpp  quantum_dot.h  universe.cpp  universe.h  (+2 more)
src/integrator/: CMakeLists.txt  euler.cpp  euler.h  history.h  integrator.cpp  integrator.h  weights.cpp  weights.h
src/integrator/RHS/: CMakeLists.txt  bloch_rhs.cpp  bloch_rhs.h  cmplx_ode_rhs.h  llg_rhs.cpp  llg_rhs.h  ode_rhs.h  rhs.h
src/interactions/: CMakeLists.txt  aim_interaction.cpp  aim_interaction.h  direct_interaction.cpp  direct_interaction.h  fixed_dyadic.cpp  fixed_dyadic.h  green_function.cpp  green_function.h  history_interaction.cpp  history_interaction.h  interaction.h  interaction_table.cpp  interaction_table.h  pulse_interaction.cpp  pulse_interaction.h  rotating_green_function.cpp  rotating_green_function.h  self_interaction.cpp  self_interaction.h
src/interactions/AIM/: AIM  CMakeLists.txt  aim_base.h  aim_fft.cpp  aim_fft.h  aim_interaction.cpp  aim_interaction.h  chebyshev.h  direct.cpp  direct.h  expansion.cpp  expansion.h  farfield.cpp  farfield.h  grid.cpp  grid.h  nearfield.cpp  nearfield.h  nearfield_interaction.cpp  nearfield_interaction.h  normalization.h  projector.h  spacetime.h
src/propagation/: green_function.h  history_evaluator.cpp  history_evaluator.h  propagation.h
test/: CMakeLists.txt  aim_test.cpp  combined_field_test.cpp  common_test.cpp  hist_inter_test2.cpp  history_interaction_test.cpp  history_test.cpp  integrator_test.cpp  lagrange_set_test.cpp  llg_test.cpp  main.cpp  math_utils_test.cpp  propagation_test.cpp  propagator_test.cpp  pulse_interaction_test.cpp  quantum_dot_test.cpp
test/AIM/: CMakeLists.txt  aim_test.cpp  chebyshev_test.cpp  expansion_test.cpp  farfield_test.cpp  field_tests.cpp  grid_test.cpp  nearfield_test.cpp  spacetime_test.cpp  temp_test.cpp
tests/: interpolation_test.cpp
tools/: CMakeLists.txt  analysis.py  find_interesting.py  point_gen.cpp  silo_builder.cpp  siloify.cpp
unit_testing/: lagrange_interp.m
