add_executable(point_gen "")
target_sources(point_gen PUBLIC "${CMAKE_CURRENT_LIST_DIR}/point_gen.cpp")
target_compile_features(point_gen PUBLIC ${CPP_FEATURES})
target_include_directories(point_gen PUBLIC ${EIGEN3_INCLUDE_DIR})

find_package(SILO)
if(${SILO_FOUND})
  add_executable(siloify "")
  target_sources(siloify PUBLIC "${CMAKE_CURRENT_LIST_DIR}/siloify.cpp")
  target_compile_features(siloify  PUBLIC ${CPP_FEATURES})
  target_include_directories(siloify PUBLIC ${EIGEN3_INCLUDE_DIR})
  target_link_libraries(siloify PUBLIC ${SILO_LIBRARIES})
endif(${SILO_FOUND})
